--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "turbo run test --concurrency=1",
     "clean": "turbo run clean --concurrency=1",
     "preclean": "lerna clean -y",
-    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./.turbo ./mochawesome-report ./mochawesome.json ./node_modules",
+    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./.turbo ./node_modules",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
     "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
@@ -33,12 +33,6 @@
     "version:release": "lerna version --conventional-commits --force-git-tag --create-release github --conventional-graduate --yes",
     "publish:pkgs": "lerna publish from-package --no-verify-access --yes",
     "plop": "plop",
-    "clean-reports:pretest": "rimraf ./packages/*/test-results",
-    "prereport": "rimraf ./mochawesome-report ./mochawesome.json",
-    "report": "yarn mochawesome:merge",
-    "postreport": "yarn mochawesome:report-generator",
-    "mochawesome:merge": "npx mochawesome-merge -f ./packages/*/test-results/*.json > mochawesome.json",
-    "mochawesome:report-generator": "npx marge -f index -t \"Tresdoce NestJS Toolkit\" -p \"Tresdoce NestJS Toolkit - Test Reports\" --saveJson --overwrite --charts --assetsDir ./mochawesome-report/assets mochawesome.json",
     "prepare": "husky"
   },
   "commitlint": {
@@ -95,17 +89,17 @@
   },
   "devDependencies": {
     "@automock/jest": "^2.1.0",
-    "@babel/core": "^7.26.0",
-    "@babel/parser": "^7.26.5",
+    "@babel/core": "^7.26.9",
+    "@babel/parser": "^7.26.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-syntax-decorators": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@babel/traverse": "^7.26.5",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
+    "@babel/traverse": "^7.26.9",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@elastic/elasticsearch-mock": "^2.0.1",
     "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
@@ -127,17 +121,16 @@
     "@types/glob": "^8.1.0",
     "@types/inline-css": "^3.0.3",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.14",
+    "@types/lodash": "^4.17.15",
     "@types/luxon": "^3.4.2",
     "@types/mocha": "^10.0.10",
-    "@types/mochawesome": "^6.2.4",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
     "@types/pug": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.0.1",
@@ -148,22 +141,18 @@
     "jest-junit": "^16.0.0",
     "jest-mock-extended": "^3.0.7",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^8.1.9",
-    "lint-staged": "^15.4.1",
-    "mocha": "^11.0.1",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
+    "lerna": "^8.2.1",
+    "lint-staged": "^15.4.3",
     "nock": "^13.5.6",
     "nodemailer-mock": "^2.0.8",
     "pika-plugin-add-properties": "^1.0.2",
     "pika-plugin-package.json": "^1.0.2",
     "plop": "^4.0.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "testcontainers": "^10.16.0",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
