chore(workflow): remove cache actions

--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -18,6 +18,7 @@ jobs:
       - name: "⚙ Setup NodeJS v${{ matrix.node }}"
         uses: actions/setup-node@v4
         with:
+          cache: 'yarn'
           node-version: ${{ matrix.node }}
 
       - name: "✅ Checkout repository"
@@ -25,15 +26,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: "💾 Restore Dependencies from cache"
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      #- name: "💾 Restore Dependencies from cache"
+      #  uses: actions/cache@v4
+      #  with:
+      #    path: |
+      #      node_modules
+      #      */*/node_modules
+      #    key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-yarn-
 
       - name: "🦉 GitGuardian scan"
         uses: GitGuardian/ggshield-action@master
