--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -27,7 +27,7 @@ jobs:
           fetch-depth: 0
 
       - name: "💾 Restore Dependencies from cache"
-        uses: actions/cache@v4.0.0
+        uses: actions/cache@4
         with:
           path: |
             node_modules
