--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -25,15 +25,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      #- name: "💾 Restore Dependencies from cache"
-      #  uses: actions/cache@v4.0.0
-      #  with:
-      #    path: |
-      #      node_modules
-      #      */*/node_modules
-      #    key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-yarn-
+      - name: "💾 Restore Dependencies from cache"
+        uses: actions/cache@v4.2.2
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: "🦉 GitGuardian scan"
         uses: GitGuardian/ggshield-action@v1.37.0
