chore: update dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 services:
   postgres:
-    image: postgres:13
+    #image: postgres:13
+    image: postgres:15
     container_name: tresdoce-test-utils-global-postgres
     restart: always
     ports:
       - '5432:5432'
     environment:
       TZ: 'America/Argentina/Buenos_Aires'
-      POSTGRES_DB: my_db
+      POSTGRES_DB: test_db
       POSTGRES_USER: root
       POSTGRES_PASSWORD: 123456
 
   mysql:
     image: mysql:5.7
+    #image: mysql:9.3.0
     container_name: tresdoce-test-utils-global-mysql
     restart: always
     ports:
@@ -20,12 +22,13 @@ services:
     environment:
       TZ: 'America/Argentina/Buenos_Aires'
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: my_db
+      MYSQL_DATABASE: test_db
       MYSQL_PASSWORD: 123456
       #MYSQL_USER: root
 
   mongo:
-    image: mongo:5.0
+    #image: mongo:5.0
+    image: mongo:8.0.6
     container_name: tresdoce-test-utils-global-mongo
     restart: always
     ports:
@@ -37,7 +40,8 @@ services:
       MONGO_INITDB_DATABASE: test_db
 
   redis:
-    image: redis:6.2-alpine
+    #image: redis:6.2-alpine
+    image: redis:7.4.2-alpine
     container_name: tresdoce-test-utils-global-redis
     restart: always
     ports:
@@ -51,7 +55,9 @@ services:
     command: [ "redis-server", "--appendonly", "yes", "--requirepass","123456" ]
 
   dynamodb:
-    image: amazon/dynamodb-local:latest
+    #image: amazon/dynamodb-local:latest
+    #image: amazon/dynamodb-local:1.21.0
+    image: amazon/dynamodb-local:2.6.0
     container_name: tresdoce-test-utils-global-dynamodb
     restart: always
     ports:
@@ -63,7 +69,8 @@ services:
       AWS_REGION: us-east-1
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    #image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
     container_name: tresdoce-test-utils-global-elasticsearch
     restart: always
     ports:
@@ -96,8 +103,8 @@ services:
 
   zookeeper:
     container_name: tresdoce-test-utils-global-zookeeper
-    image: confluentinc/cp-zookeeper:5.5.3
-    #image: confluentinc/cp-zookeeper:7.8.0
+    #image: confluentinc/cp-zookeeper:5.5.3
+    image: confluentinc/cp-zookeeper:7.8.0
     restart: always
     environment:
       TZ: 'America/Argentina/Buenos_Aires'
@@ -108,8 +115,8 @@ services:
 
   kafka:
     container_name: tresdoce-test-utils-global-kafka
-    image: confluentinc/cp-kafka:5.5.3
-    #image: confluentinc/cp-kafka:7.8.0
+    #image: confluentinc/cp-kafka:5.5.3
+    image: confluentinc/cp-kafka:7.8.0
     restart: always
     environment:
       TZ: 'America/Argentina/Buenos_Aires'
@@ -161,15 +168,15 @@ services:
 
         echo 'kafka-topics --bootstrap-server kafka:29092 --list' >> startup.sh
         echo 'echo \"Kafka started\";' >> startup.sh
-        echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic' >> startup.sh
-        echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.a' >> startup.sh
-        echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.b' >> startup.sh
-        echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.c' >> startup.sh
+        #echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic' >> startup.sh
+        #echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.a' >> startup.sh
+        #echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.b' >> startup.sh
+        #echo 'kafka-topics --create --if-not-exists --zookeeper zookeeper:2181 --replication-factor 1 --partitions 1 --topic test.topic.c' >> startup.sh
         # for kafka 7.8.0
-        #echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic' >> startup.sh
-        #echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.a' >> startup.sh
-        #echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.b' >> startup.sh
-        #echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.c' >> startup.sh
+        echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic' >> startup.sh
+        echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.a' >> startup.sh
+        echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.b' >> startup.sh
+        echo 'kafka-topics --create --if-not-exists --bootstrap-server docker:9092 --replication-factor 1 --partitions 1 --topic test.topic.c' >> startup.sh
         echo 'echo \"Successfully created the following topics:\"' >> startup.sh
         echo 'kafka-topics --bootstrap-server kafka:29092 --list' >> startup.sh
         chmod a+x startup.sh
@@ -181,8 +188,8 @@ services:
 
   schema-registry:
     container_name: tresdoce-test-utils-global-kafka-schema-registry
-    image: confluentinc/cp-schema-registry:5.5.3
-    #image: confluentinc/cp-schema-registry:7.8.0
+    #image: confluentinc/cp-schema-registry:5.5.3
+    image: confluentinc/cp-schema-registry:7.8.0
     restart: always
     depends_on:
       - kafka
