--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '20.19.0', '22.14.0' ]
+        node: [ '20.19.2', '22.16.0', '24.1.0' ]
     env:
       DO_NOT_TRACK: 1
       TURBO_TELEMETRY_DISABLED: 1
