--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,8 @@ services:
 
   elasticsearch:
     #image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
+    #image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0
     container_name: tresdoce-test-utils-global-elasticsearch
     restart: always
     ports:
