--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@elastic/elasticsearch-mock": "^2.1.0",
+    "@jest/globals": "^30.0.3",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
