--- a/packages/test-utils/src/fixtures/docker-compose/docker-compose.yml
+++ b/packages/test-utils/src/fixtures/docker-compose/docker-compose.yml
@@ -54,7 +54,7 @@ services:
       REDIS_PASSWORD: 123456
       REDIS_HOST: cache
       #REDIS_USERNAME: default
-    command: [ "redis-server", "--appendonly", "yes", "--requirepass","123456" ]
+    command: ['redis-server', '--appendonly', 'yes', '--requirepass', '123456']
 
   dynamodb:
     #image: amazon/dynamodb-local:latest
