--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -35,16 +35,14 @@
     "access": "public",
     "directory": "../../dist/filters"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
+    "@tresdoce-nestjs-toolkit/core": "^2.0.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
-  },
-  "dependencies": {
-    "@tresdoce-nestjs-toolkit/core": "^2.0.6"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.5.3",
