--- a/packages/response-parser/package.json
+++ b/packages/response-parser/package.json
@@ -35,15 +35,13 @@
     "access": "public",
     "directory": "../../dist/response-parser"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
+  "dependencies": {
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
+    "@tresdoce-nestjs-toolkit/filters": "^2.0.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
-  },
-  "dependencies": {
-    "@tresdoce-nestjs-toolkit/filters": "^2.0.6"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.5.3",
