--- a/packages/snowflake-uid/package.json
+++ b/packages/snowflake-uid/package.json
@@ -35,10 +35,10 @@
     "access": "public",
     "directory": "../../dist/snowflake-uid"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
+  "dependencies": {
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
