--- a/packages/tracing/package.json
+++ b/packages/tracing/package.json
@@ -35,39 +35,26 @@
     "access": "public",
     "directory": "../../dist/tracing"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
-    "@opentelemetry/core": "^2.0.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
-    "@opentelemetry/id-generator-aws-xray": "2.0.0",
-    "@opentelemetry/instrumentation-http": "^0.202.0",
-    "@opentelemetry/propagator-aws-xray": "^2.0.0",
-    "@opentelemetry/propagator-b3": "^2.0.0",
-    "@opentelemetry/propagator-jaeger": "^2.0.0",
-    "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/sdk-node": "^0.202.0",
-    "@opentelemetry/sdk-trace-base": "^2.0.0",
-    "@opentelemetry/semantic-conventions": "^1.32.0",
-    "minimatch": "^10.0.3",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
-  },
+  "peerDependencies": {},
   "dependencies": {
     "@opentelemetry/core": "^2.0.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.203.0",
     "@opentelemetry/id-generator-aws-xray": "2.0.0",
-    "@opentelemetry/instrumentation-http": "^0.202.0",
+    "@opentelemetry/instrumentation-http": "^0.203.0",
     "@opentelemetry/propagator-aws-xray": "^2.0.0",
     "@opentelemetry/propagator-b3": "^2.0.0",
     "@opentelemetry/propagator-jaeger": "^2.0.0",
     "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/sdk-node": "^0.202.0",
+    "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-base": "^2.0.0",
-    "@opentelemetry/semantic-conventions": "^1.32.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@tresdoce-nestjs-toolkit/utils": "^2.0.6",
-    "minimatch": "^10.0.3"
+    "minimatch": "^10.0.3",
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.5.3",
