--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
-name: "Publish PKG to NPM"
+name: 'Publish PKG to NPM'
 
 on:
   workflow_dispatch:
     inputs:
       release:
         type: choice
-        description: "Select version to publish"
+        description: 'Select version to publish'
         required: true
         options:
           - pre-release
@@ -22,23 +22,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '20.19.3' ]
+        node: ['20.19.3']
     env:
       DO_NOT_TRACK: 1
       TURBO_TELEMETRY_DISABLED: 1
-    name: "Publish"
+    name: 'Publish'
     steps:
-      - name: "⚙ Setup NodeJS v${{ matrix.node }}"
+      - name: '⚙ Setup NodeJS v${{ matrix.node }}'
         uses: actions/setup-node@v4.2.0
         with:
           node-version: ${{ matrix.node }}
 
-      - name: "✅ Checkout repository"
+      - name: '✅ Checkout repository'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: "💾 Restore Dependencies from cache"
+      - name: '💾 Restore Dependencies from cache'
         uses: actions/cache@v4.2.2
         with:
           path: |
@@ -48,7 +48,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: "🦉 GitGuardian scan"
+      - name: '🦉 GitGuardian scan'
         uses: GitGuardian/ggshield-action@v1.37.0
         env:
           GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
@@ -57,34 +57,34 @@ jobs:
           GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
 
-      - name: "📦 Install Dependencies"
+      - name: '📦 Install Dependencies'
         run: yarn install
 
-      - name: "💅 Lint"
-        run: yarn lint
+      - name: '💅 Lint'
+        run: yarn lint:format:check
 
-      - name: "🔨 Build"
+      - name: '🔨 Build'
         run: yarn build --force && node sonar-args.js
 
-      - name: "👨‍💻 Run Test"
+      - name: '👨‍💻 Run Test'
         run: yarn test --force
         env:
           NODE_ENV: 'test'
 
-      - name: "📊 Publish Test Report"
+      - name: '📊 Publish Test Report'
         uses: dorny/test-reporter@v1.9.1
         if: success() || failure()
         with:
-          name: "Test Report (${{ matrix.node }})"
+          name: 'Test Report (${{ matrix.node }})'
           path: 'packages/**/junit.xml'
           reporter: jest-junit
 
-      - name: "📊 Upload coverage report to Codecov"
+      - name: '📊 Upload coverage report to Codecov'
         uses: codecov/codecov-action@v5.4.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: "📊 SonarCloud Scan"
+      - name: '📊 SonarCloud Scan'
         uses: sonarsource/sonarqube-scan-action@v5.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -95,12 +95,12 @@ jobs:
       #  env:
       #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      - name: "🏷 Version packages as ${{ github.event.inputs.release }}"
+      - name: '🏷 Version packages as ${{ github.event.inputs.release }}'
         run: |
           # GIT and NPM config
           git config --global user.name "GitHub CI/CD bot"
           git config --global user.email "${GITHUB_EMAIL}"
-          
+
           if ${{github.event.inputs.release == 'pre-release'}}; then
             yarn version:prerelease -m "ci(version): version packages as pre-release"
             git add .
@@ -110,12 +110,12 @@ jobs:
             yarn version:release -m "ci(version): version packages as release"
           fi
 
-      - name: "🚀 Publish packages to npm 🎉"
+      - name: '🚀 Publish packages to npm 🎉'
         run: |
           npm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
           npm run publish:pkgs
 
-      - name: "🔁 Rebase"
+      - name: '🔁 Rebase'
         run: |
           git remote set-url origin "https://github.com/${{ github.repository }}.git"
           git config --global user.name "GitHub CI/CD bot"
