chore(workflows): update node versions and publish report

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['20.19.3', '22.17.0', '24.3.0']
+        node: ['20.19.4', '22.18.0', '24.5.0']
     env:
       DO_NOT_TRACK: 1
       TURBO_TELEMETRY_DISABLED: 1
@@ -61,8 +61,8 @@ jobs:
           NODE_ENV: 'test'
 
       - name: '📊 Publish Test Report'
-        uses: dorny/test-reporter@v1.9.1
-        if: success() || failure()
+        uses: dorny/test-reporter@v2
+        if: ${{ !cancelled() }}
         with:
           name: 'Test Report (${{ matrix.node }})'
           path: 'packages/**/junit.xml'
